--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "ESNext",
     "lib": ["esnext"],
     "allowJs": true,
-    "skipLibCheck": true,
     "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": false,
     "esModuleInterop": true,
-    "module": "commonjs",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "downlevelIteration": true,
     "isolatedModules": false,
     "strictNullChecks": true,
-    "paths": {},
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "declaration": true
   },
-  "exclude": ["node_modules", "./dist"]
+  "exclude": ["node_modules", "./dist", "test", "./jest.config.js"]
 }
